Fixed project buttons spacing

--- a/_src/includes/projects.styles.scss
+++ b/_src/includes/projects.styles.scss
@@ -83,8 +83,12 @@
         margin-bottom: 24px;
     }
 
+    &__link-wrap {
+      margin: 0 auto;
+      display: block;
+    }
+
     &__link {
         @include button(white, $colorPrimary);
-        margin: 0 auto;
     }
 }
